--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1>projetos</h1>
         <p>O primeiro site que fiz</p>
         <ul>
-            <li><a href="[link para site/trabalho 1]">Trabalho 1</a></li>
+            <li><a href="https://lucastoxic.github.io/primeiro-site/">Trabalho 1</a></li>
            
         </ul>
     </section>
